--- a/settings.toml
+++ b/settings.toml
@@ -3,6 +3,7 @@ CWD = 'E:\Documents (E)\neovim\photoReset'
 Destination = 'BLANK'
 
 [Metadata]
+Author = 'BLANK'
 Date = '2026-02-13'
 Exposure = 'BLANK'
 LensModel = 'BLANK'
